--- a/gamePage.html
+++ b/gamePage.html
@@ -1,5 +1,5 @@
 <!--Author: Alfredo Rodriguez-->
-<!--File: HTMgamePage.htmlhtml-->
+<!--File: gamePage.html-->
 <!--Date: 7/8/2017-->
 
 <!DOCTYPE html>
