Pre-Final Fixes

--- a/gamePage.html
+++ b/gamePage.html
@@ -60,7 +60,7 @@
 
                 <button class="characters" id="Anakin-1">
 
-                    <h2>Anakin Skywalker</h2>
+                    <h2 id="anakinName">Anakin Skywalker</h2>
 
                     <img src="assets/images/anakinSkywalker.jpg" class="images">
 
@@ -70,7 +70,7 @@
 
                 <button class="characters" id="Galen-1">
 
-                    <h2>Galen Marek</h2>
+                    <h2 id="galenName">Galen Marek</h2>
 
                     <img src="assets/images/galenMarek.jpg" class="images">
 
@@ -80,7 +80,7 @@
 
                 <button class="characters" id="Malak-1">
 
-                    <h2>Darth Malak</h2>
+                    <h2 id="malekName">Darth Malak</h2>
 
                     <img src="assets/images/darthMalak.jpg" class="images">
 
@@ -90,7 +90,7 @@
 
                 <button class="characters" id="Revan-1">
 
-                    <h2>Darth Revan</h2>
+                    <h2 id="revanName">Darth Revan</h2>
 
                     <img src="assets/images/darthRevan.jpg" class="images">
 
@@ -160,8 +160,6 @@
                 <a href="#" class="button black" id="attack">Attack</a>
 
                 <a href="#" class="button purple" id="force">Force Attack</a>
-
-                <a href="#" class="button green" id="meditate">Meditate</a>
 
                 <a href="#" class="button dsgnmoo" id="enrage">Enrage</a>
 
