--- a/gamePage.html
+++ b/gamePage.html
@@ -37,7 +37,6 @@
 
 <div class="container-fluid">
 
-
     <div class="row">
 
         <div class="col-lg-12">
@@ -49,197 +48,222 @@
     </div>
 
 
-    <div class="row">
+    <div class="row row-offcanvas row-offcanvas-right">
 
-        <h1>Character</h1>
+        <div class="col-6 col-md-9">
 
-        <div class="col-md-6" id="characterSelection">
+            <div class="row">
 
-            <button class="characters" id="Anakin-1">
+                <h1>Character</h1>
 
-                <h2 id="anakinName">Anakin Skywalker</h2>
+                <div class="col-md-6" id="characterSelection">
 
-                <img src="assets/images/anakinSkywalker.jpg" class="images">
+                    <button class="characters" id="Anakin-1">
 
-                <div class="anakinHP"></div>
+                        <h2 id="anakinName">Anakin Skywalker</h2>
 
-            </button>
+                        <img src="assets/images/anakinSkywalker.jpg" class="images">
 
-            <button class="characters" id="Galen-1">
+                        <div class="anakinHP"></div>
 
-                <h2 id="galenName">Galen Marek</h2>
+                    </button>
 
-                <img src="assets/images/galenMarek.jpg" class="images">
+                    <button class="characters" id="Galen-1">
 
-                <div class="galenHP"></div>
+                        <h2 id="galenName">Galen Marek</h2>
 
-            </button>
+                        <img src="assets/images/galenMarek.jpg" class="images">
 
-            <button class="characters" id="Malak-1">
+                        <div class="galenHP"></div>
 
-                <h2 id="malekName">Darth Malak</h2>
+                    </button>
 
-                <img src="assets/images/darthMalak.jpg" class="images">
+                    <button class="characters" id="Malak-1">
 
-                <div class="malakHP"></div>
+                        <h2 id="malekName">Darth Malak</h2>
 
-            </button>
+                        <img src="assets/images/darthMalak.jpg" class="images">
 
-            <button class="characters" id="Revan-1">
+                        <div class="malakHP"></div>
 
-                <h2 id="revanName">Darth Revan</h2>
+                    </button>
 
-                <img src="assets/images/darthRevan.jpg" class="images">
+                    <button class="characters" id="Revan-1">
 
-                <div class="revanHP"></div>
+                        <h2 id="revanName">Darth Revan</h2>
 
-            </button>
+                        <img src="assets/images/darthRevan.jpg" class="images">
 
-        </div>
+                        <div class="revanHP"></div>
 
-    </div>
+                    </button>
 
+                </div>
 
-    <div class="row">
+            </div>
 
-        <h1 id="enemyHeader">Enemies</h1>
 
-        <div class="col-md-6" id="enemySelection">
+            <div class="row">
 
-            <button class="enemies" id="Anakin-2">
+                <h1 id="enemyHeader">Enemies</h1>
 
-                <h2>Anakin Skywalker</h2>
+                <div class="col-md-6" id="enemySelection">
 
-                <img src="assets/images/anakinSkywalker.jpg" class="images">
+                    <button class="enemies" id="Anakin-2">
 
-                <div class="anakin-2-HP"></div>
+                        <h2>Anakin Skywalker</h2>
 
-            </button>
+                        <img src="assets/images/anakinSkywalker.jpg" class="images">
 
-            <button class="enemies" id="Galen-2">
+                        <div class="anakin-2-HP"></div>
 
-                <h2>Galen Marek</h2>
+                    </button>
 
-                <img src="assets/images/galenMarek.jpg" class="images">
+                    <button class="enemies" id="Galen-2">
 
-                <div class="galen-2-HP"></div>
+                        <h2>Galen Marek</h2>
 
-            </button>
+                        <img src="assets/images/galenMarek.jpg" class="images">
 
-            <button class="enemies" id="Malak-2">
+                        <div class="galen-2-HP"></div>
 
-                <h2>Darth Malak</h2>
+                    </button>
 
-                <img src="assets/images/darthMalak.jpg" class="images">
+                    <button class="enemies" id="Malak-2">
 
-                <div class="malak-2-HP"></div>
+                        <h2>Darth Malak</h2>
 
-            </button>
+                        <img src="assets/images/darthMalak.jpg" class="images">
 
-            <button class="enemies" id="Revan-2">
+                        <div class="malak-2-HP"></div>
 
-                <h2>Darth Revan</h2>
+                    </button>
 
-                <img src="assets/images/darthRevan.jpg" class="images">
+                    <button class="enemies" id="Revan-2">
 
-                <div class="revan-2-HP"></div>
+                        <h2>Darth Revan</h2>
 
-            </button>
+                        <img src="assets/images/darthRevan.jpg" class="images">
 
-        </div>
+                        <div class="revan-2-HP"></div>
 
-    </div>
+                    </button>
 
-    <div class="row">
+                </div>
 
-        <div class="col-md-6" id="playButtons">
+            </div>
 
-            <a href="#" class="button black" id="attack">Attack</a>
+            <div class="row">
 
-            <a href="#" class="button purple" id="force">Force Attack</a>
+                <div class="col-md-6" id="playButtons">
 
-            <a href="#" class="button dsgnmoo" id="enrage">Enrage</a>
+                    <a href="#" class="button black" id="attack">Attack</a>
 
-        </div>
+                    <a href="#" class="button purple" id="force">Force Attack</a>
 
-    </div>
+                    <a href="#" class="button dsgnmoo" id="enrage">Enrage</a>
 
+                </div>
 
-    <div class="row">
+            </div>
 
-        <h1 id="defenderHeader">Defender</h1>
 
-        <div class="col-md-6" id="fightStage">
+            <div class="row">
 
-            <button class="enemies" id="Anakin-3">
+                <h1 id="defenderHeader">Defender</h1>
 
-                <h2>Anakin Skywalker</h2>
+                <div class="col-md-6" id="fightStage">
 
-                <img src="assets/images/anakinSkywalker.jpg" class="images">
+                    <button class="enemies" id="Anakin-3">
 
-                <div class="anakin-2-HP"></div>
+                        <h2>Anakin Skywalker</h2>
 
-            </button>
+                        <img src="assets/images/anakinSkywalker.jpg" class="images">
 
-            <button class="enemies" id="Galen-3" onmouseover=>
+                        <div class="anakin-2-HP"></div>
 
-                <h2>Galen Marek</h2>
+                    </button>
 
-                <img src="assets/images/galenMarek.jpg" class="images">
+                    <button class="enemies" id="Galen-3" onmouseover=>
 
-                <div class="galen-2-HP"></div>
+                        <h2>Galen Marek</h2>
 
-            </button>
+                        <img src="assets/images/galenMarek.jpg" class="images">
 
-            <button class="enemies" id="Malak-3">
+                        <div class="galen-2-HP"></div>
 
-                <h2>Darth Malak</h2>
+                    </button>
 
-                <img src="assets/images/darthMalak.jpg" class="images">
+                    <button class="enemies" id="Malak-3">
 
-                <div class="malak-2-HP"></div>
+                        <h2>Darth Malak</h2>
 
-            </button>
+                        <img src="assets/images/darthMalak.jpg" class="images">
 
-            <button class="enemies" id="Revan-3">
+                        <div class="malak-2-HP"></div>
 
-                <h2>Darth Revan</h2>
+                    </button>
 
-                <img src="assets/images/darthRevan.jpg" class="images">
+                    <button class="enemies" id="Revan-3">
 
-                <div class="revan-2-HP"></div>
+                        <h2>Darth Revan</h2>
 
-            </button>
+                        <img src="assets/images/darthRevan.jpg" class="images">
 
-        </div>
+                        <div class="revan-2-HP"></div>
 
-    </div>
+                    </button>
 
+                </div>
 
-    <div class="row">
+            </div>
 
-        <div class="col-md-6" id="resetStage">
 
-            <a href="#" class="button rss" id="resetGame">Reset Game</a>
+            <div class="row">
 
-            <a href="index.html" class="button yahoo" id="crawlSequence">Crawl Sequence</a>
+                <div class="col-md-6" id="resetStage">
 
-        </div>
+                    <a href="#" class="button rss" id="resetGame">Reset Game</a>
 
-    </div>
+                    <a href="index.html" class="button yahoo" id="crawlSequence">Crawl Sequence</a>
 
-
-    <div class="row">
-
-        <div class="col-md-6" id="textBox">
-
-            <div id="gameStatus">
+                </div>
 
             </div>
 
         </div>
 
+        <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
+
+            <div id="character">
+
+                <h1 id="characterName"></h1>
+
+                <h1>Character Health: <span id="characterHealth"></span></h1>
+
+                <h1>Attack Power: <span id="AP"></span></h1>
+
+            </div>
+
+            <div id="textBox">
+
+
+            </div>
+
+            <div id="enemy">
+
+                <h1 id="enemyName"></h1>
+
+                <h1>Character Health: <span id="enemyHealth"></span></h1>
+
+            </div>
+
+
+        </div>
+
     </div>
+
+</div>
 
 
 </div>
